<resources>
    <string name="app_name">Backup Butler</string>
    <string name="app_name_pro">Backup Butler Pro</string>
    <string name="settings_label">Settings</string>
    <string name="version_label">Version</string>
    <string name="upgrade_status_label">Upgrade status</string>
    <string name="upgrade_basicversion_label">Basic version</string>
    <string name="upgrade_proversion_label">Pro version</string>
    <string name="progress_preparing_label">Preparing</string>
    <string name="notification_channel_backup_progress_label">Backup progress notifications</string>
    <string name="progress_loading_task_label">Loading task</string>
    <string name="progress_processing_task_label">Processing task</string>
    <string name="task_editor_backup_new_label">New backup task</string>
    <string name="trigger_tab_label">Triggers</string>
    <string name="task_tab_label">Tasks</string>
    <plurals name="x_versions">
        <item quantity="one">%d version</item>
        <item quantity="other">%d versions</item>
    </plurals>
    <plurals name="x_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="x_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="task_backup_edit_label">Edit backup task</string>
    <string name="task_name_label">Task name</string>
    <string name="task_description_label">Task description</string>
    <string name="general_next_action">Next</string>
    <string name="general_previous_action">Previous</string>
    <string name="general_cancel_action">Cancel</string>
    <string name="task_label">Task</string>
    <string name="general_run_action">Run</string>
    <string name="general_edit_action">Edit</string>
    <string name="general_delete_action">Delete</string>
    <string name="task_editor_taskname_desc">What should your task be called? No worries, you can change it later.</string>
    <string name="task_editor_backup_destinations_label">Destinations</string>
    <string name="backup_generators_label">Sources</string>
    <string name="backup_add_generator_action">Add source</string>
    <string name="general_view_action">View</string>
    <string name="general_unknown_label">Unknown</string>
    <string name="storage_edit_action">Edit storage</string>
    <string name="storage_create_action">Create storage</string>
    <string name="storage_selection_label">Select storage type</string>
    <string name="general_location_label">Location</string>
    <string name="general_options_label">Options</string>
    <string name="general_path_label">Path</string>
    <string name="general_create_action">Create</string>
    <string name="storage_type_local_label">Local storage</string>
    <string name="storage_type_local_desc">Local storage that is directly accessible, e.g. internal sdcard.</string>
    <string name="storage_type_saf_label">SAF storage</string>
    <string name="storage_type_saf_desc">Any type of storage accessible through the Storage Access Framework, e.g. sdcards or cloud storage.</string>
    <string name="general_name_label">Name</string>
    <string name="general_core_settings_label">Core settings</string>
    <string name="general_save_action">Save</string>
    <string name="task_type_backupsimple_description">Sources: %d, Destinations: %d</string>
    <string name="general_select_type_label">Select type</string>
    <string name="backup_type_app_label">App backup</string>
    <string name="backup_type_app_desc">Backups apps and their files</string>
    <string name="backup_type_files_desc">Backup of an arbitrary file path.</string>
    <string name="backup_type_files_label">File backup</string>
    <string name="backup_generator_label">Source</string>
    <string name="general_introduction_label">Introduction</string>
    <string name="general_selected_label">Selected</string>
    <string name="general_last_backup_time_x">Last backup: %s</string>
    <string name="progress_loading_label">Loading</string>
    <string name="general_createdat_label">Created at</string>
    <string name="general_restore_action">Restore</string>
    <string name="general_todo_msg">TODO (Not implemented yet)</string>
    <string name="general_update_available_label">Update available</string>
    <string name="general_update_action">Update</string>
    <string name="general_changelog_label">Changelog</string>
    <string name="general_size_label">Size</string>
    <string name="general_compressed_size_label">Compressed Size</string>
    <string name="general_share_action">Share</string>
    <string name="general_bugreporting_label">Bug reporting</string>
    <string name="userinterface_settings_label">User interface</string>
    <string name="userinterface_settings_desc">Visual settings, e.g. light/dark mode.</string>
    <string name="bugreporting_settings_label">Bugreporting</string>
    <string name="bugreporting_settings_desc">Automatic bug reports, logging and other debugging options.</string>
    <string name="category_other_label">Other</string>
    <string name="category_core_label">Core</string>
    <string name="backup_settings_label">Source</string>
    <string name="backup_settings_desc">Backup creation and restoration.</string>
    <string name="storage_settings_desc">Settings that affect saving and loading from storage locations.</string>
    <string name="userinterface_theme_label">Theme</string>
    <string name="userinterface_theme_automatic_label">Automatic</string>
    <string name="userinterface_theme_dark_label">Dark</string>
    <string name="userinterface_theme_light_label">Light</string>
    <string name="userinterface_theme_system_label">System</string>
    <string name="debug_record_log_label">Record debug log</string>
    <string name="debug_record_log_desc">Start recording everything the app does into a log file that you can share.</string>
    <string name="progress_creating_backup">Creating backup</string>
    <string name="progress_saving_to_storage">Saving to storage</string>
    <string name="progress_working_label">Working</string>
    <string name="progress_processing_x_label">Processing: %s</string>
    <string name="progress_saving_label">Saving</string>
    <string name="result_x_successful">%d successful</string>
    <string name="result_x_skipped">%d skipped</string>
    <string name="result_x_failed">%d failed</string>
    <string name="general_show_action">Show</string>
    <string name="task_editor_restore_edit_label">Edit restore task</string>
    <string name="task_editor_restore_new_label">New restore task</string>
    <string name="task_backup_label">Backup task</string>
    <string name="task_restore_label">Restore task</string>
    <string name="task_editor_restore_app_config_skip_existing_apps_label">Skip existing apps</string>
    <string name="task_editor_restore_app_config_skip_existing_apps_desc">Don\'t restore apps that already exist.</string>
    <string name="task_editor_restore_app_config_options_label">App options</string>
    <string name="task_editor_restore_app_config_restore_apk_label">Restore APK</string>
    <string name="task_editor_restore_app_config_restore_apk_desc">Restore the app itself.</string>
    <string name="task_editor_restore_app_config_restore_data_label">Restore data</string>
    <string name="task_editor_restore_app_config_restore_data_desc">Restore the app\'s data.</string>
    <string name="task_editor_restore_files_config_replace_existing_files_label">Replace existing files</string>
    <string name="task_editor_restore_files_config_replace_existing_files_desc">Replace a file if it already exists.</string>
    <string name="task_editor_restore_config_file_options_label">File options</string>
    <string name="task_type_restoresimple_description">Simple restore task for %d backups.</string>
    <string name="storage_detach_action">Detach</string>
    <string name="general_delete_all_action">Delete all</string>
    <string name="general_read_only_label">Read only</string>
    <string name="progress_deleting_x_label">Deleting %s</string>
    <string name="general_grant_action">Grant</string>
    <string name="storage_additional_permission_required_msg">An additional permission is required to use this storage location.</string>
    <string name="progress_restoring_backup">Restoring backup</string>
    <string name="general_original_path_label">Original path</string>
    <string name="general_select_path_label">Select path</string>
    <string name="general_please_try_again_msg">Please try again</string>
    <string name="storage_strategy_simple_label">Simple</string>
    <string name="storage_strategy_simple_desc">If you backup files that didn\'t change multiple times, two full sets of files will still be saved. It\'s robust and easy on the CPU, but consumes a lot traffic and space.</string>
    <string name="storage_existing_storage_in_path_msg">The location is already a backup storage: %s</string>
    <string name="general_import_action">Import</string>
    <string name="storage_already_added_msg">The storage \'%s\' is already added.</string>
    <string name="storage_no_data_returned_msg">No data was returned.</string>
    <string name="general_use_action">Use</string>
    <string name="general_error_type_missmatch_msg">Type missmatch: Wanted %1$s, but got %2$s.</string>
    <string name="general_error_cant_access_msg">Can\'t access %s.</string>
    <string name="general_summary_label">Summary</string>
    <plurals name="task_editor_restore_x_backups_selected_desc">
        <item quantity="one">%d backup is selected for restoration.</item>
        <item quantity="other">%d backups are selected for restoration.</item>
    </plurals>
    <string name="general_continue_action">Continue</string>
    <string name="storage_tab_label">Storage</string>
    <string name="task_editor_backup_generators_empty_desc">What should this task backup?</string>
    <string name="task_editor_backup_destinations_empty_desc">Where should this task save it\'s backups?</string>
    <string name="empty_list_msg">The list is empty.</string>
    <string name="documentation_label">Documentation</string>
    <string name="email_developer_label">Email developer</string>
    <string name="discord_label">Discord</string>
    <string name="reddit_label">Reddit</string>
    <string name="xda_label">XDA Developers</string>
    <string name="issue_tracker_label">Issue tracker</string>
    <string name="language_settings_label">Language</string>
    <string name="language_translation_label">Translation</string>
    <string name="support_installid_label">Install ID</string>
    <string name="documentation_desc">The official Wiki for Backup Butler.</string>
    <string name="email_developer_desc">Note that I can only respond in german or english.</string>
    <string name="discord_desc">A place to hang out in and ask questions.</string>
    <string name="reddit_desc">Our official subreddit at /r/backupbutler.</string>
    <string name="xda_desc">Our own thread on XDA-Developers.</string>
    <string name="issue_tracker_desc">A public issue tracker for bug reports and feature requests (english only).</string>
    <string name="support_installid_desc">Automatic error reports are anonymous. Share your install ID if the developer needs to find your error reports.</string>
    <string name="debug_label">Debug</string>
    <string name="task_editor_restore_app_config_restore_cache_label">Restore cache</string>
    <string name="task_editor_restore_app_config_restore_cache_desc">Restore the app\'s cache.</string>
    <string name="bugreporting_report_action">Report a bug</string>
    <string name="bugreporting_record_debuglog_action">Record debug log</string>
    <string name="general_remove_action">Remove</string>
</resources>