<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_card_text_onsurface"
        android:summary="@string/documentation_desc"
        android:title="@string/documentation_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bb.darken.eu/wiki" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_github_onsurface"
        android:summary="@string/issue_tracker_desc"
        android:title="@string/issue_tracker_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bb.darken.eu/issues" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_discord_onsurface"
        android:summary="@string/discord_desc"
        android:title="@string/discord_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bb.darken.eu/discord" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_reddit_onsurface"
        android:summary="@string/reddit_desc"
        android:title="@string/reddit_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bb.darken.eu/reddit" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_xda_onsurface"
        android:summary="@string/xda_desc"
        android:title="@string/xda_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bb.darken.eu/xda" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_email_onsurface"
        android:key="support.email.darken"
        android:summary="@string/email_developer_desc"
        android:title="@string/email_developer_label" />

    <PreferenceCategory app:title="@string/category_other_label">
        <Preference
            android:icon="@drawable/ic_id_onsurface"
            android:key="support.installid"
            android:summary="@string/support_installid_desc"
            android:title="@string/support_installid_label" />
    </PreferenceCategory>
</PreferenceScreen>