<?xml version="1.0" encoding="utf-8"?>
<eu.darken.bb.task.ui.editor.restore.config.RestoreConfigContainerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <eu.darken.bb.common.ui.SwitchPreferenceView
            android:id="@+id/option_skip_existing_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pvDescription="@string/task_editor_restore_app_config_skip_existing_apps_desc"
            app:pvIcon="@drawable/ic_check_circle"
            app:pvTitle="@string/task_editor_restore_app_config_skip_existing_apps_label" />

        <eu.darken.bb.common.ui.SwitchPreferenceView
            android:id="@+id/option_restore_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pvDescription="@string/task_editor_restore_app_config_restore_apk_desc"
            app:pvIcon="@drawable/ic_check_circle"
            app:pvTitle="@string/task_editor_restore_app_config_restore_apk_label" />

        <eu.darken.bb.common.ui.SwitchPreferenceView
            android:id="@+id/option_restore_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pvDescription="@string/task_editor_restore_app_config_restore_data_desc"
            app:pvIcon="@drawable/ic_check_circle"
            app:pvTitle="@string/task_editor_restore_app_config_restore_data_label" />

        <eu.darken.bb.common.ui.SwitchPreferenceView
            android:id="@+id/option_restore_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pvDescription="@string/task_editor_restore_app_config_restore_cache_desc"
            app:pvIcon="@drawable/ic_check_circle"
            app:pvTitle="@string/task_editor_restore_app_config_restore_cache_label" />
    </LinearLayout>
</eu.darken.bb.task.ui.editor.restore.config.RestoreConfigContainerView>