<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:icon="@drawable/ic_theme_onsurface"
        android:key="ui.theme"
        android:title="@string/userinterface_theme_label" />

    <ListPreference
        android:icon="@drawable/ic_startmode_onsurface"
        android:key="ui.startmode"
        android:title="@string/userinterface_startmode_label" />

    <PreferenceCategory android:title="@string/category_other_label">
        <Preference
            android:icon="@drawable/ic_language_onsurface"
            android:key="ui.language.picker"
            app:fragment="eu.darken.bb.main.ui.settings.ui.language.LanguageFragment"
            android:title="@string/language_settings_label" />
        <Preference
            android:icon="@drawable/ic_translate_onsurface"
            android:summary="https://bb.darken.eu/translation"
            android:title="@string/language_translation_label">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://bb.darken.eu/translation" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug_label">
        <CheckBoxPreference
            android:icon="@drawable/ic_spider_thread_onsurface"
            android:key="ui.debugpage.show"
            android:summary="Show an extra page with debug options."
            android:title="Debug page" />
    </PreferenceCategory>
</PreferenceScreen>