<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.ui.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1"
        android:title="@string/settings_label"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_record_debuglog"
        android:visible="false"
        tools:visible="true"
        android:icon="@drawable/ic_bug_report"
        android:orderInCategory="2"
        android:title="@string/bugreporting_record_debuglog_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report_bug"
        android:icon="@drawable/ic_bug_report"
        android:orderInCategory="2"
        android:title="@string/bugreporting_report_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_startmode"
        android:icon="@drawable/ic_startmode_onsurface"
        android:orderInCategory="3"
        android:title="@string/startmode_switch_action"
        app:showAsAction="never" />
</menu>
