<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/backup_generators_label"
        app:title="@string/task_editor_backup_new_label" />

    <eu.darken.bb.common.ui.RecyclerViewWrapperLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/sources_list_wrapper"
        app:layout_constraintBottom_toTopOf="@+id/setupbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:rvwEmptyText="@string/task_editor_backup_generators_empty_desc"
        app:rvwLoading="true"
        app:rvwLoadingUntilFirstChange="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sources_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/generator_list_adapter_line" />
    </eu.darken.bb.common.ui.RecyclerViewWrapperLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/setupbar"
        app:layout_constraintEnd_toEndOf="parent" />

    <eu.darken.bb.common.ui.SetupBarView
        android:id="@+id/setupbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:sbvPositiveSecondaryLabel="@string/general_continue_action" />

</androidx.constraintlayout.widget.ConstraintLayout>